Always call back to new Geolocation requests

This change makes sure we always call back to new Geolocation requests, even
when other requests are ongoing. Note that it requires an Android-specific
change to WebCore to fix https://bugs.webkit.org/show_bug.cgi?id=87030.

Bug: 6511338
Change-Id: If46d2ef0eb8e81925ae51ed2e8f2d16a9fa6c997